--- a/crypto_rf.ipynb
+++ b/crypto_rf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "cf721c9f",
    "metadata": {},
    "outputs": [
@@ -10,6 +10,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/nick/crypto_forecasting/venv/lib/python3.12/site-packages/xgboost/core.py:377: FutureWarning: Your system has an old version of glibc (< 2.28). We will stop supporting Linux distros with glibc older than 2.28 after **May 31, 2025**. Please upgrade to a recent Linux distro (with glibc >= 2.28) to use future versions of XGBoost.\n",
+      "Note: You have installed the 'manylinux2014' variant of XGBoost. Certain features such as GPU algorithms or federated learning are not available. To use these features, please upgrade to a recent Linux distro with glibc 2.28+, and install the 'manylinux_2_28' variant.\n",
+      "  warnings.warn(\n",
+      "/tmp/ipykernel_44661/3702835266.py:14: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  bitcoin = yf.download(\"BTC-USD\",start=\"2010-05-17\",end=\"2025-07-23\")['Close']\n",
       "[*********************100%***********************]  1 of 1 completed\n"
      ]
     }
@@ -19,7 +24,7 @@
     "from sklearn.linear_model import Ridge,Lasso,LinearRegression\n",
     "from sklearn.ensemble import GradientBoostingRegressor,RandomForestRegressor\n",
     "from xgboost import XGBRegressor\n",
-    "from sklearn.metrics import r2_score,root_mean_squared_error\n",
+    "from sklearn.metrics import r2_score,root_mean_squared_error,mean_absolute_percentage_error\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
@@ -29,8 +34,7 @@
     "\n",
     "\n",
     "bitcoin = yf.download(\"BTC-USD\",start=\"2010-05-17\",end=\"2025-07-23\")['Close']\n",
-    "bitcoin = bitcoin.shift(1)\n",
-    "bitcoin.dropna(inplace=True)\n",
+    "bitcoin = bitcoin.dropna()\n",
     "bitcoin = bitcoin.reset_index()\n",
     "bitcoin['Date'] = pd.to_datetime(bitcoin['Date'])\n",
     "bitcoin = bitcoin.sort_index()"
@@ -38,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "5bc41afc",
    "metadata": {},
    "outputs": [
@@ -47,12 +51,12 @@
      "output_type": "stream",
      "text": [
       "                       Model        R2          RMSE  Cross-val Scores\n",
-      "0           LinearRegression  0.688263  15356.978768     -2.508100e+08\n",
-      "1                      lasso  0.688258  15357.097959     -2.508100e+08\n",
-      "2                      ridge  0.688134  15360.139568     -2.508186e+08\n",
-      "3  GradientBoostingRegressor  0.996803   1555.306491     -2.623445e+06\n",
-      "4         xBGboostRegression  0.995557   1833.409684     -3.171507e+06\n",
-      "5               randomforest  0.998968    883.403382     -8.367453e+05\n"
+      "0           LinearRegression  0.677730  15595.623298     -2.498791e+08\n",
+      "1                      lasso  0.677733  15595.556963     -2.498791e+08\n",
+      "2                      ridge  0.677789  15594.201479     -2.498879e+08\n",
+      "3  GradientBoostingRegressor  0.996679   1583.208724     -2.641402e+06\n",
+      "4         xBGboostRegression  0.996279   1675.871366     -3.127302e+06\n",
+      "5               randomforest  0.998991    872.469845     -8.267978e+05\n"
      ]
     }
    ],
@@ -110,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "9def4dbb",
    "metadata": {},
    "outputs": [
@@ -118,64 +122,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Vs Actual Closing Prices\n",
+      "Root Mean-Squared Error: 872.5\n",
+      "R2 Score: 99.90%\n",
+      "Mean Absolute Percentage Error: 0.0213\n",
+      "Predicted Vs Actual Prices\n",
       "\n",
-      "             Actual      Predicted\n",
-      "5        402.152008     404.071358\n",
-      "6        435.790985     412.027608\n",
-      "8        411.574005     411.782089\n",
-      "14       383.614990     381.481912\n",
-      "15       375.071991     370.390101\n",
-      "...             ...            ...\n",
-      "3936  107088.429688  107128.302344\n",
-      "3945  109232.070312  108322.181719\n",
-      "3949  115987.203125  115492.047812\n",
-      "3952  119116.117188  117840.190781\n",
-      "3960  117439.539062  117630.165547\n",
-      "\n",
-      "[793 rows x 2 columns]\n",
       "         Actual   Predicted\n",
-      "5    402.152008  404.071358\n",
-      "6    435.790985  412.027608\n",
-      "8    411.574005  411.782089\n",
-      "14   383.614990  381.481912\n",
-      "15   375.071991  370.390101\n",
-      "16   359.511993  330.383411\n",
-      "26   390.414001  394.354820\n",
-      "38   347.270996  355.635856\n",
-      "41   357.618011  348.511570\n",
-      "47   327.553986  328.072970\n",
-      "49   339.485992  336.780586\n",
-      "59   376.132996  398.207542\n",
-      "61   387.407990  386.901340\n",
-      "62   375.197998  375.309503\n",
-      "67   367.572998  359.497448\n",
-      "88   351.631989  346.681335\n",
-      "107  315.032013  296.417578\n",
-      "109  264.195007  282.643259\n",
-      "136  217.464005  229.240732\n",
-      "137  226.972000  234.045093\n",
+      "0    457.334015  419.248171\n",
+      "2    394.795990  419.248171\n",
+      "7    423.204987  424.807103\n",
+      "18   320.510010  332.538331\n",
+      "22   365.026001  349.266836\n",
+      "23   361.562012  363.885430\n",
+      "26   390.414001  384.859965\n",
+      "28   394.773010  394.723366\n",
+      "39   354.704010  349.948862\n",
+      "44   338.321014  338.516214\n",
+      "46   325.891998  327.123691\n",
+      "48   330.492004  331.052089\n",
+      "55   367.695007  385.153868\n",
+      "61   387.407990  378.935325\n",
+      "76   381.315002  376.089645\n",
+      "79   376.854004  371.348394\n",
+      "84   346.364990  353.390977\n",
+      "96   331.885986  330.990951\n",
+      "98   322.533997  323.226966\n",
+      "110  274.473999  272.801914\n",
       "             Actual      Predicted\n",
-      "3864   84033.867188   84529.220703\n",
-      "3867   85063.414062   85332.795469\n",
-      "3872   93943.796875   94382.039375\n",
-      "3876   94978.750000   94242.094375\n",
-      "3885   97032.320312   97633.348203\n",
-      "3888  104696.328125  102260.509063\n",
-      "3889  104106.359375  102752.137656\n",
-      "3890  102812.953125  103221.328594\n",
-      "3891  104169.812500  103323.552969\n",
-      "3893  103744.640625  103663.125156\n",
-      "3896  106446.007812  103834.948984\n",
-      "3900  111673.281250  108721.365312\n",
-      "3903  109035.390625  108977.801094\n",
-      "3924  105552.023438  105784.461328\n",
-      "3930  102257.406250  102160.910547\n",
-      "3936  107088.429688  107128.302344\n",
-      "3945  109232.070312  108322.181719\n",
-      "3949  115987.203125  115492.047812\n",
-      "3952  119116.117188  117840.190781\n",
-      "3960  117439.539062  117630.165547\n"
+      "3824   86742.671875   86626.873516\n",
+      "3828   82862.210938   82416.177422\n",
+      "3838   84043.242188   84508.936016\n",
+      "3851   83102.828125   82922.329219\n",
+      "3864   84033.867188   84055.197969\n",
+      "3868   85174.304688   87115.756172\n",
+      "3875   93754.843750   94607.878984\n",
+      "3876   94978.750000   94360.255625\n",
+      "3890  102812.953125  104136.108203\n",
+      "3901  107287.796875  110723.556328\n",
+      "3902  107791.156250  109593.451016\n",
+      "3905  108994.640625  108586.045625\n",
+      "3913  104731.984375  105232.480156\n",
+      "3914  101575.953125  104887.134844\n",
+      "3917  105793.648438  106483.084062\n",
+      "3919  110257.234375  109083.710938\n",
+      "3922  106090.968750  105994.270781\n",
+      "3949  115987.203125  112727.624688\n",
+      "3953  119849.703125  118226.965156\n",
+      "3958  117939.976562  117914.973359\n"
      ]
     }
    ],
@@ -187,9 +180,26 @@
     "\n",
     "\n",
     "\n",
+    "\n",
     "pred_vs_actual.sort_index(inplace=True)\n",
-    "print('Predicted Vs Actual Closing Prices\\n')\n",
-    "print(pred_vs_actual)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Root Mean-Squared Error\n",
+    "rmse = root_mean_squared_error(y_test,pred)\n",
+    "print(f'Root Mean-Squared Error: {rmse:.4}')\n",
+    "\n",
+    "# R2 Score\n",
+    "r2 = r2_score(y_test,pred)\n",
+    "print(f'R2 Score: {r2*100:.2f}%')\n",
+    "\n",
+    "# mean absolute percentage error\n",
+    "mape = mean_absolute_percentage_error(y_test,pred)\n",
+    "print(f'Mean Absolute Percentage Error: {mape:.4f}')\n",
+    "\n",
+    "\n",
+    "\n",
+    "print('Predicted Vs Actual Prices\\n')\n",
     "\n",
     "print(pred_vs_actual.head(20))\n",
     "print(pred_vs_actual.tail(20))"
@@ -197,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "bdddfb70",
    "metadata": {},
    "outputs": [
@@ -206,7 +216,7 @@
      "output_type": "stream",
      "text": [
       "R2 Score from Best Model: 99.90%\n",
-      "RMSE from best model: 879.48\n"
+      "RMSE from best model: 887.25\n"
      ]
     }
    ],
@@ -220,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "fa7641f3",
    "metadata": {},
    "outputs": [
@@ -231,61 +241,61 @@
       "Predicted Vs Actual Closing Prices\n",
       "\n",
       "             Actual      Predicted\n",
-      "5        402.152008     405.497525\n",
-      "6        435.790985     417.150572\n",
-      "8        411.574005     416.855168\n",
-      "14       383.614990     380.556992\n",
-      "15       375.071991     369.760000\n",
+      "0        457.334015     419.004662\n",
+      "2        394.795990     419.004662\n",
+      "7        423.204987     428.036390\n",
+      "18       320.510010     332.656341\n",
+      "22       365.026001     349.885466\n",
       "...             ...            ...\n",
-      "3936  107088.429688  107152.149063\n",
-      "3945  109232.070312  108420.463281\n",
-      "3949  115987.203125  115587.452813\n",
-      "3952  119116.117188  117891.949844\n",
-      "3960  117439.539062  117549.783672\n",
+      "3919  110257.234375  109294.498750\n",
+      "3922  106090.968750  106021.669688\n",
+      "3949  115987.203125  112215.142344\n",
+      "3953  119849.703125  118184.629531\n",
+      "3958  117939.976562  118066.981172\n",
       "\n",
       "[793 rows x 2 columns]\n",
       "         Actual   Predicted\n",
-      "5    402.152008  405.497525\n",
-      "6    435.790985  417.150572\n",
-      "8    411.574005  416.855168\n",
-      "14   383.614990  380.556992\n",
-      "15   375.071991  369.760000\n",
-      "16   359.511993  330.357371\n",
-      "26   390.414001  392.379611\n",
-      "38   347.270996  355.535376\n",
-      "41   357.618011  348.511480\n",
-      "47   327.553986  328.290571\n",
-      "49   339.485992  336.140366\n",
-      "59   376.132996  397.465782\n",
-      "61   387.407990  385.797690\n",
-      "62   375.197998  376.743733\n",
-      "67   367.572998  359.569067\n",
-      "88   351.631989  346.263115\n",
-      "107  315.032013  291.817039\n",
-      "109  264.195007  281.026550\n",
-      "136  217.464005  229.552652\n",
-      "137  226.972000  234.683614\n",
+      "0    457.334015  419.004662\n",
+      "2    394.795990  419.004662\n",
+      "7    423.204987  428.036390\n",
+      "18   320.510010  332.656341\n",
+      "22   365.026001  349.885466\n",
+      "23   361.562012  364.198610\n",
+      "26   390.414001  382.148637\n",
+      "28   394.773010  393.817467\n",
+      "39   354.704010  349.385830\n",
+      "44   338.321014  339.604424\n",
+      "46   325.891998  328.085191\n",
+      "48   330.492004  331.530179\n",
+      "55   367.695007  381.741788\n",
+      "61   387.407990  377.642846\n",
+      "76   381.315002  376.559184\n",
+      "79   376.854004  371.054784\n",
+      "84   346.364990  352.835428\n",
+      "96   331.885986  330.930211\n",
+      "98   322.533997  323.214616\n",
+      "110  274.473999  273.289464\n",
       "             Actual      Predicted\n",
-      "3864   84033.867188   84503.557344\n",
-      "3867   85063.414062   84807.409141\n",
-      "3872   93943.796875   94274.320000\n",
-      "3876   94978.750000   94232.826484\n",
-      "3885   97032.320312   97606.868516\n",
-      "3888  104696.328125  102342.183594\n",
-      "3889  104106.359375  102853.855156\n",
-      "3890  102812.953125  103381.798437\n",
-      "3891  104169.812500  103468.973437\n",
-      "3893  103744.640625  103579.986094\n",
-      "3896  106446.007812  103971.363203\n",
-      "3900  111673.281250  108896.113281\n",
-      "3903  109035.390625  108858.963906\n",
-      "3924  105552.023438  105865.193203\n",
-      "3930  102257.406250  102082.349531\n",
-      "3936  107088.429688  107152.149063\n",
-      "3945  109232.070312  108420.463281\n",
-      "3949  115987.203125  115587.452813\n",
-      "3952  119116.117188  117891.949844\n",
-      "3960  117439.539062  117549.783672\n"
+      "3824   86742.671875   86679.778438\n",
+      "3828   82862.210938   82453.396641\n",
+      "3838   84043.242188   84105.483984\n",
+      "3851   83102.828125   83176.678047\n",
+      "3864   84033.867188   84122.687500\n",
+      "3868   85174.304688   87564.549297\n",
+      "3875   93754.843750   94608.680391\n",
+      "3876   94978.750000   94432.468359\n",
+      "3890  102812.953125  104121.011328\n",
+      "3901  107287.796875  110637.326328\n",
+      "3902  107791.156250  109568.021328\n",
+      "3905  108994.640625  108990.121328\n",
+      "3913  104731.984375  105284.586406\n",
+      "3914  101575.953125  104835.677891\n",
+      "3917  105793.648438  106787.782500\n",
+      "3919  110257.234375  109294.498750\n",
+      "3922  106090.968750  106021.669688\n",
+      "3949  115987.203125  112215.142344\n",
+      "3953  119849.703125  118184.629531\n",
+      "3958  117939.976562  118066.981172\n"
      ]
     }
    ],
@@ -308,7 +318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.11.6)",
+   "display_name": "venv (3.12.3)",
    "language": "python",
    "name": "python3"
   },
@@ -322,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
